--- a/Ausgaben/.classpath
+++ b/Ausgaben/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/DBPool-4.7.1.jar" sourcepath="lib/src/DBPool-4.7.1-src.zip"/>
 	<classpathentry kind="lib" path="lib/hsqldb-1.8.0.jar" sourcepath="lib/src/hsqldb-1.8.0-src.zip"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
