--- a/XbmcTools/build.xml
+++ b/XbmcTools/build.xml
@@ -41,7 +41,7 @@
               <attribute name="Application-Name" value="RenameXbmcEpisodes" />
             </manifest>
             <zipfileset dir="${bin.dir}" includes="**/RenameXbmcEpisodes*.class" />
-        	<zipgroupfileset dir="${lib.dir}" includes="*.jar" />
+        	<zipgroupfileset dir="${lib.dir}" includes="jsoup*.jar" />
         </jar>
     </target>
 	
