--- a/XbmcTools/.classpath
+++ b/XbmcTools/.classpath
@@ -4,5 +4,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="lib" path="lib/jsoup-1.7.3.jar" sourcepath="lib/jsoup-1.7.3-src.zip"/>
 	<classpathentry kind="lib" path="lib/jsch-0.1.53.jar" sourcepath="lib/jsch-0.1.53-src.zip"/>
+	<classpathentry kind="lib" path="lib/jgoodies-common-1.8.1.jar" sourcepath="lib/jgoodies-common-1.8.1-src.zip"/>
+	<classpathentry kind="lib" path="lib/jgoodies-looks-2.7.0.jar" sourcepath="lib/jgoodies-looks-2.7.0-src.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
